# tgl

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindLibevent.cmake
include/tgl/: mtproto-common.h
src/: generate.c  mtproto-utils.c  tgl-net.c  tgl-timers.c
